# CanvaMap

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/canvamap/: canvas_map.py  drawing_utils.py  feature.py  geojson_utils.py  map_layer.py  tile_handler.py
src/examples/: donut_example.geojson  test.py
