[project]
name = "canvamap"
version = "0.1.0"
description = "Add interactive map tiles to a Tkinter canvas"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Andrea Siotto", email = "siotto.public@gmail.com" }
]
keywords = ["tkinter", "map", "canvas", "OpenStreetMap", "tiles"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "Pillow>=9.0.0",
  "requests>=2.25.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/canvamap"
"Documentation" = "https://github.com/yourusername/canvamap#readme"
"Source" = "https://github.com/yourusername/canvamap"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
